test/expected/declare_stmi.out
declare x as static mutable int
        ^
9: error: "mutable static int" is illegal for built-in type
